--- a/founders.html
+++ b/founders.html
@@ -32,7 +32,7 @@
           <ons-list id="chatMember">
             <ons-list-header><img src='logo.png' width='70%'></ons-list-header>
             <a href="next.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>Home</ons-list-item></a>
-            <a href="#" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>About</ons-list-item></a>
+            <a href="about.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>About</ons-list-item></a>
             <a href="profile.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>Profile</ons-list-item></a>
             <a href="founders.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>Founders</ons-list-item></a>
             <ons-list-item style="position:absolute;overflow:hidden;bottom:0;" class="mentionBtn" onclick="onBackKeyDown()" tappable>Logout</ons-list-footer>
@@ -60,7 +60,7 @@
 				<img src='logo.png' width='70%'>
       		</div>
         </div>
-	
+
 		<p align="left" style="margin-left:20px;font-family:HNLight;font-size:1.5em;font-weight:bold;color:black;">Our Co-Founders</p>
 			<div class="kiri" style="width:20%;height:auto;float:left;margin-right:20px;margin-left:20px;">
 				<div class="fotoUser" style="width:75px;height:75px;position:relative;border-radius:50px;background-image:url(img/timo.jpg);background-size:cover;repeat:no-repeat;float:left;margin-bottom:10px;"></div>
@@ -70,7 +70,7 @@
 				<div class="tglReview" style="width:auto;height:auto;position:relative;font-size:1em;font-family:HNLight;float:none;color:lightgray;font-weight:none;">Co-Founders, CPO, Head of IT</div>
 			</div>
 			<div class="isiReview" style="width:auto;height:auto;margin-top:10px;margin-top:10px;margin-bottom:40px;margin-left:20px;margin-right:20px;position:relative;font-size:1em;font-family:HNLight;float:none;color:black;font-weight:none;clear:both;">Timotius Tirtawan is the co-founder and CPO. He also the head of IT staff in Go&Rent. With his experiences in IT, he build the back-end system of Go&Rent. He attended Sekolah Tinggi Teknik Surabaya and got his Computer Bachelor Degrees.</div>
-			
+
 			<div class="kiri" style="width:20%;height:auto;float:left;margin-right:20px;margin-left:20px;">
 				<div class="fotoUser" style="width:75px;height:75px;position:relative;border-radius:50px;background-image:url(img/jefri.jpg);background-size:cover;repeat:no-repeat;float:left;margin-bottom:10px;"></div>
 			</div>
@@ -79,7 +79,7 @@
 				<div class="tglReview" style="width:auto;height:auto;position:relative;font-size:1em;font-family:HNLight;float:none;color:lightgray;font-weight:none;margin-right:10px;">Co-Founders, CSO, Head of Sales & Marketing</div>
 			</div>
 			<div class="isiReview" style="width:auto;height:auto;margin-top:10px;margin-top:10px;margin-bottom:40px;margin-left:20px;margin-right:20px;position:relative;font-size:1em;font-family:HNLight;float:none;color:black;font-weight:none;clear:both;">Jefri Tanwijaya is the co-founder, Chief Strategy Officer, and head of sales & marketing. With his speciality in marketing, he designed the sales and marketing techniques. He attended Sekolah Tinggi Teknik Surabaya and got his Computer Bachelor Degrees.</div>
-			
+
 			<div class="kiri" style="width:20%;height:auto;float:left;margin-right:20px;margin-left:20px;">
 				<div class="fotoUser" style="width:75px;height:75px;position:relative;border-radius:50px;background-image:url(img/jessi.jpg);background-size:cover;repeat:no-repeat;float:left;margin-bottom:10px;"></div>
 			</div>
@@ -88,7 +88,7 @@
 				<div class="tglReview" style="width:auto;height:auto;position:relative;font-size:1em;font-family:HNLight;float:none;color:lightgray;font-weight:none;margin-right:10px;">Co-Founders, CEO, Head of Community</div>
 			</div>
 			<div class="isiReview" style="width:auto;height:auto;margin-top:10px;margin-top:10px;margin-bottom:40px;margin-left:20px;margin-right:20px;position:relative;font-size:1em;font-family:HNLight;float:none;color:black;font-weight:none;clear:both;">Jessica Wijaksono is the co-founder, CEO, and head of Go&Rent community. She drives the company’s vision, strategy and growth. With her experiences in IT, she also build the front-end system of Go&Rent. She attended Sekolah Tinggi Teknik Surabaya and got her Computer Bachelor Degrees.</div>
-			
+
 			<div class="kiri" style="width:20%;height:auto;float:left;margin-right:20px;margin-left:20px;">
 				<div class="fotoUser" style="width:75px;height:75px;position:relative;border-radius:50px;background-image:url(img/joshua.jpg);background-size:cover;repeat:no-repeat;float:left;margin-bottom:10px;"></div>
 			</div>
@@ -97,9 +97,99 @@
 				<div class="tglReview" style="width:auto;height:auto;position:relative;font-size:1em;font-family:HNLight;float:none;color:lightgray;font-weight:none;margin-right:10px;">Co-Founders, Chairman of Go&Rent</div>
 			</div>
 			<div class="isiReview" style="width:auto;height:auto;margin-top:10px;margin-top:10px;margin-bottom:30px;margin-left:20px;margin-right:20px;position:relative;font-size:1em;font-family:HNLight;float:none;color:black;font-weight:none;clear:both;">Joshua Theophilus is the co-founder and our chairman. He plays his leading role in driving key strategic across the global business. He managed every sector well. He attended Sekolah Tinggi Teknik Surabaya and got his Computer Bachelor Degrees.</div>
-			
-			<p class="isiDetail" style="font-size:0.8em;font-weight:none;margin-right:10px;margin-left:20px;">2017 &copy; Go&Rent, Inc.</p>
+
+			<p class="isiDetail" style="font-size:0.8em;font-weight:none;margin-right:10px;margin-left:20px;">2017 &copy; Go & Rent, Inc.</p>
   </ons-page>
   </template>
-</body> 
+</body>
+<script type="text/javascript">
+var server = "http://192.168.1.3/sdpajax/server.php";
+var ini,ini2;
+var latkita=0,longkita=0;
+  document.addEventListener("deviceready", onDeviceReady, false);
+  var onSuccess = function(position) {
+        /*alert('Latitude: '          + position.coords.latitude          + '\n' +
+              'Longitude: '         + position.coords.longitude         + '\n' +
+              'Altitude: '          + position.coords.altitude          + '\n' +
+              'Accuracy: '          + position.coords.accuracy          + '\n' +
+              'Altitude Accuracy: ' + position.coords.altitudeAccuracy  + '\n' +
+              'Heading: '           + position.coords.heading           + '\n' +
+              'Speed: '             + position.coords.speed             + '\n' +
+              'Timestamp: '         + position.timestamp                + '\n');*/
+        latkita = position.coords.latitude;
+        longkita = position.coords.longitude;
+    };
+
+    // onError Callback receives a PositionError object
+    //
+    function onError(error) {
+        alert('code: '    + error.code    + '\n' +
+              'message: ' + error.message + '\n');
+    }
+    function pindahDetail(id){
+      localStorage.setItem("detailID",id);
+      window.location = "detail.html";
+    }
+  function onDeviceReady(){
+    ini = localStorage.getItem("storageName") != null ? localStorage.getItem("storageName") : "tm_tr" ;
+    ini2 = localStorage.getItem("tipeName");
+    navigator.geolocation.getCurrentPosition(onSuccess, onError);
+    $.post(server, {'userskr' : ini ,'longkita' : longkita , 'latkita': latkita,'tipe': ini2},function(data){
+      data = JSON.parse(data);
+      if(ini2 == "ambilNearme"){
+        data.sort(function(a,b){
+          return a.distance - b.distance;
+        });
+      }
+        $("#isiSeemore").html("");
+      for(var i= 0;i<data.length;i++){
+        $("#isiSeemore").html($("#isiSeemore").html()+'<div class="horizontal-menu-fav" onclick="pindahDetail(\''+data[i].id_rumah+'\')" style="display:absolute;"><div class="detailFavorite" style="display:inline-block;"><div class="img-feature"><center><img src="'+data[i].picture_rumah+'" style="width:100%;height:100%;"></center></div><div class="content"><h5><b>'+data[i].title_rumah+'</b></h5><span style="font-size: 0.8em">'+data[i].kapasitas+' Orang &bull; '+(Math.floor(data[i].distance*1000)/1000)+' km</span></div></div></div>');
+      }
+    });
+  };
+  $(document).ready(onDeviceReady);
+window.fn = {};
+  window.fn.open = function() {
+      let menu = document.getElementById('menu');
+      menu.open();
+  };
+
+  window.fn.close = function() {
+      let menu = document.getElementById('menu');
+      menu.close();
+  };
+  function makeNotification() {
+      cordova.plugins.notification.local.schedule({
+          id: 1,
+          title: "Coba Coba",
+          text: "Hai Hai Timo"
+      });
+  };
+  function onBackKeyDown(){
+    window.location="index.html";
+    window.plugins.googleplus.disconnect(
+      function (msg) {
+        //alert("Berhasil Logout Google"); // do something useful instead of alerting
+      },function (msg) {
+        //alert("Gagal Logout Google"); // do something useful instead of alerting
+        //alert(msg);
+
+      }
+    );
+    facebookConnectPlugin.api("/me/permissions?method=delete", ['email','user_birthday','public_profile'],function (msg) {
+      //alert("Berhasil Logout  Facebook"); // do something useful instead of alerting
+    }, function (msg) {
+      //alert("Gagal Logout Facebook"); // do something useful instead of alerting
+      //alert(msg);
+    });
+    facebookConnectPlugin.logout(function (msg) {
+      //alert("Berhasil Logout  Facebook"); // do something useful instead of alerting
+    }, function (msg) {
+      //alert("Gagal Logout Facebook"); // do something useful instead of alerting
+      //alert(msg);
+    });
+  }
+app.initialize();
+
+</script>
 </html>
