--- a/about.html
+++ b/about.html
@@ -64,9 +64,100 @@
 		<p align="left" style="margin-left:20px;font-family:HNLight;font-size:1.5em;font-weight:bold;color:black;">About Us</p>
 		<p class="isiDetail" style="font-size:1em;font-weight:none;margin-right:20px;margin-left:20px;">Founded in December of 2017 and based in Surabaya, Indonesia, Go&Rent is a trusted community marketplace for people to list, discover, and book unique accommodations around the world — online or from a mobile phone.<br><br>
 		Whether an apartment for a night, a castle for a week, or a villa for a month, Go&Rent connects people to unique travel experiences, at any price point, in more than 30 cities in Indonesia. And with world-class customer service and a growing community of users, Go&Rent is the easiest way for people to monetize their extra space and showcase it to an audience of millions.</p>
-		<p class="isiDetail" style="font-size:0.8em;font-weight:none;margin-right:10px;margin-left:20px;">2017 &copy; Go&Rent, Inc.</p>
+		<p class="isiDetail" style="font-size:0.8em;font-weight:none;margin-right:10px;margin-left:20px;">2017 &copy; Go & Rent, Inc.</p>
 
   </ons-page>
   </template>
 </body>
+<script type="text/javascript">
+//http://128.199.89.1/goandrent/public/api/api
+var server = "http://192.168.1.3/sdpajax/server.php";
+var ini,ini2;
+var latkita=0,longkita=0;
+  document.addEventListener("deviceready", onDeviceReady, false);
+  var onSuccess = function(position) {
+        /*alert('Latitude: '          + position.coords.latitude          + '\n' +
+              'Longitude: '         + position.coords.longitude         + '\n' +
+              'Altitude: '          + position.coords.altitude          + '\n' +
+              'Accuracy: '          + position.coords.accuracy          + '\n' +
+              'Altitude Accuracy: ' + position.coords.altitudeAccuracy  + '\n' +
+              'Heading: '           + position.coords.heading           + '\n' +
+              'Speed: '             + position.coords.speed             + '\n' +
+              'Timestamp: '         + position.timestamp                + '\n');*/
+        latkita = position.coords.latitude;
+        longkita = position.coords.longitude;
+    };
+
+    // onError Callback receives a PositionError object
+    //
+    function onError(error) {
+        alert('code: '    + error.code    + '\n' +
+              'message: ' + error.message + '\n');
+    }
+    function pindahDetail(id){
+      localStorage.setItem("detailID",id);
+      window.location = "detail.html";
+    }
+  function onDeviceReady(){
+    ini = localStorage.getItem("storageName") != null ? localStorage.getItem("storageName") : "tm_tr" ;
+    ini2 = localStorage.getItem("tipeName");
+    navigator.geolocation.getCurrentPosition(onSuccess, onError);
+    $.post(server, {'userskr' : ini ,'longkita' : longkita , 'latkita': latkita,'tipe': ini2},function(data){
+      data = JSON.parse(data);
+      if(ini2 == "ambilNearme"){
+        data.sort(function(a,b){
+          return a.distance - b.distance;
+        });
+      }
+        $("#isiSeemore").html("");
+      for(var i= 0;i<data.length;i++){
+        $("#isiSeemore").html($("#isiSeemore").html()+'<div class="horizontal-menu-fav" onclick="pindahDetail(\''+data[i].id_rumah+'\')" style="display:absolute;"><div class="detailFavorite" style="display:inline-block;"><div class="img-feature"><center><img src="'+data[i].picture_rumah+'" style="width:100%;height:100%;"></center></div><div class="content"><h5><b>'+data[i].title_rumah+'</b></h5><span style="font-size: 0.8em">'+data[i].kapasitas+' Orang &bull; '+(Math.floor(data[i].distance*1000)/1000)+' km</span></div></div></div>');
+      }
+    });
+  };
+  $(document).ready(onDeviceReady);
+window.fn = {};
+  window.fn.open = function() {
+      let menu = document.getElementById('menu');
+      menu.open();
+  };
+
+  window.fn.close = function() {
+      let menu = document.getElementById('menu');
+      menu.close();
+  };
+  function makeNotification() {
+      cordova.plugins.notification.local.schedule({
+          id: 1,
+          title: "Coba Coba",
+          text: "Hai Hai Timo"
+      });
+  };
+  function onBackKeyDown(){
+    window.location="index.html";
+    window.plugins.googleplus.disconnect(
+      function (msg) {
+        //alert("Berhasil Logout Google"); // do something useful instead of alerting
+      },function (msg) {
+        //alert("Gagal Logout Google"); // do something useful instead of alerting
+        //alert(msg);
+
+      }
+    );
+    facebookConnectPlugin.api("/me/permissions?method=delete", ['email','user_birthday','public_profile'],function (msg) {
+      //alert("Berhasil Logout  Facebook"); // do something useful instead of alerting
+    }, function (msg) {
+      //alert("Gagal Logout Facebook"); // do something useful instead of alerting
+      //alert(msg);
+    });
+    facebookConnectPlugin.logout(function (msg) {
+      //alert("Berhasil Logout  Facebook"); // do something useful instead of alerting
+    }, function (msg) {
+      //alert("Gagal Logout Facebook"); // do something useful instead of alerting
+      //alert(msg);
+    });
+  }
+app.initialize();
+
+</script>
 </html>
