--- a/feedback.html
+++ b/feedback.html
@@ -80,131 +80,65 @@
 
 		<div class="contProfile" style="width:100%;height:auto;margin-bottom:100px;">
 			<div class="fotoProfile" style="width:100px;height:100px;position:relative;margin:auto;margin-top:20px;border-radius:50px;background-image:url(img/kenji.jpg);background-size:cover;repeat:no-repeat;margin-bottom:10px;"></div>
-			<p align="center" style="font-family:AgencyFB;font-size:1em;font-weight:none;position:relative;">Member since August 2017</p>
+			<p align="center" id="sincejoin" style="font-family:AgencyFB;font-size:1em;font-weight:none;position:relative;">Member since August 2017</p>
 			<form method='post' class="editProf" align="left">
 				<p align="left" style="margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;color:gray;">Feedback</p>
 				<textarea id="txtFeedback" name="feedback" placeholder="Write your opinion..." style="width:90%;height:150px;position:absolute;left:0px;margin-left:20px;padding:10px 10px 10px 10px;"></textarea>
 		</div>
 
 		<footer style="text-align:right;padding-right:20px;">
-				<input type="button" name="btnSubmit" value="Submit" style="width:30%;height:60%;background-color:#f94d6e;border-radius:10px;font-size:1.5em;color:white;top:20%;position:relative;">
+				<input type="button" name="btnSubmit" value="Submit" onclick="jalankanfeed();" style="width:30%;height:60%;background-color:#f94d6e;border-radius:10px;font-size:1.5em;color:white;top:20%;position:relative;">
 			</form>
 		</footer>
   </ons-page>
   </template>
 	</body>
   <script type="text/javascript">
-  var server = "http://workastation.hol.es/sdpajax/server.php";
-  function getIp() {
-      ons.notification.prompt({message: 'Masukkan ip server'}).then(function(answer) {
-          if(answer.trim() == '')
-              getIp();
-          else {
-              server += answer;
-              server += '/sdpajax/server.php';
-          }
-      });
+  var server = "http://192.168.1.3/sdpajax/server.php";
+  var ini ;
+  var latkita=0,longkita=0;
+  function jalankanfeed(){
+    var getInputFeed = document.getElementById("txtFeedback").value;
+    $.post(server, {'userskr' : ini ,'isinya' : getInputFeed,'tipe': "feedback"},function(data){
+      alert("Terima kasih atas Feedback anda!");
+      window.location = "next.html";
+    });
   }
     document.addEventListener("deviceready", onDeviceReady, false);
-    ons.ready(function() {
-          /*getIp();
-          $.post(server, {'user': 'timo', 'tipe': 2},function(data){
-            cordova.plugins.notification.local.schedule({
-                id: 10,
-                title: "Berhasil Login",
-                text: "Halo "+data['nama']+"!"
-            });
-          });
+    var onSuccess = function(position) {
+          /*alert('Latitude: '          + position.coords.latitude          + '\n' +
+                'Longitude: '         + position.coords.longitude         + '\n' +
+                'Altitude: '          + position.coords.altitude          + '\n' +
+                'Accuracy: '          + position.coords.accuracy          + '\n' +
+                'Altitude Accuracy: ' + position.coords.altitudeAccuracy  + '\n' +
+                'Heading: '           + position.coords.heading           + '\n' +
+                'Speed: '             + position.coords.speed             + '\n' +
+                'Timestamp: '         + position.timestamp                + '\n');*/
+          latkita = position.coords.latitude;
+          longkita = position.coords.longitude;
+      };
 
-          // makeNotification(0, 'ini title', 'ini isi dari text');
-          /*cordova.plugins.notification.local.on("click", function(notification) {
-              cordova.plugins.notification.local.clearAll();
-          });*/
-
-
-          // navigator.vibrate([300, 10, 150, 10, 150]);
-      });
-      $(document).ready(onDeviceReady());
+      // onError Callback receives a PositionError object
+      //
+      function onError(error) {
+          alert('code: '    + error.code    + '\n' +
+                'message: ' + error.message + '\n');
+      }
+      function pindahDetail(id){
+        localStorage.setItem("detailID",id);
+        window.location = "detail.html";
+      }
     function onDeviceReady(){
-      //getIp();
-      $.post(server, {'user': localStorage.getItem("storageName"), 'tipe': 3},function(data){
+      ini = localStorage.getItem("storageName") != null ? localStorage.getItem("storageName") : "tm_tr" ;
+      $.post(server, {'userskr' : ini ,'tipe': "selectProfile"},function(data){
         data = JSON.parse(data);
-        cordova.plugins.notification.local.schedule({
-            id: 5,
-            title: "Berhasil Login",
-            text: "Halo "+data['name']+"!"
-        });
+        console.log(data);
+        $("#sincejoin").html("Member since "+data.since);
+        var isipic = data.picture_user[5] == ":" ? data.picture_user : "http://192.168.1.3/sdpajax/"+data.picture_user;
+        $(".fotoProfile").css("background-image","url('"+isipic+"')");
       });
-
     };
-  function myfunc(){
-    window.plugins.googleplus.login({},function (obj) {
-      alert(JSON.stringify(obj)); // do something useful instead of alerting
-    },
-    function (msg) {
-      alert('error: ' + msg);
-    });
-  };
-  function myfuncfb(){
-    var fbLoginSuccess = function(result){
-    //calling api after login success
-    facebookConnectPlugin.api("/me?fields=email,name,birthday",['email','user_birthday','public_profile'],function(userData){
-    //API success callback
-      alert("User Info : "+userData.email+"\n Hello ! Our Beloved : "+userData.name +"\n We Want to Remind You that your Birthday is : "+userData.birthday);
-      },function(error){
-    //API error callback
-      alert(JSON.stringify(error));
-      });
-    }
-    //alert("user Info : "+userData.name+" Hello "+userData.email);
-    //document.getElementById("cobaAjax").innerHTML=JSON.stringify(userData);
-    //alert("UserInfo: "+userData['email'] + "\n Hello "+userData['name']+" Good to see you");
-    //};
-    facebookConnectPlugin.login(['email','user_birthday','public_profile'], fbLoginSuccess,
-    function loginError (error) {
-    alert(JSON.stringify(error));
-  });
-  };
-  function onBackKeyDown(){
-    makeNotification();
-    $.post(server, {'chat': chat, 'nama': nama, 'tipe': 2});
-
-    var x = confirm("Are you sure ?");
-    window.plugins.googleplus.disconnect(
-      function (msg) {
-        alert("Berhasil Logout Google"); // do something useful instead of alerting
-      },function (msg) {
-        alert("Gagal Logout Google"); // do something useful instead of alerting
-        x=false;
-        alert(msg);
-
-      }
-    );
-    facebookConnectPlugin.api("/me/permissions?method=delete", ['email','user_birthday','public_profile'],function (msg) {
-      alert("Berhasil Logout  Facebook"); // do something useful instead of alerting
-    }, function (msg) {
-      alert("Gagal Logout Facebook"); // do something useful instead of alerting
-      x=false;
-      alert(msg);
-    });
-    facebookConnectPlugin.logout(function (msg) {
-      alert("Berhasil Logout  Facebook"); // do something useful instead of alerting
-    }, function (msg) {
-      alert("Gagal Logout Facebook"); // do something useful instead of alerting
-      x=false;
-      alert(msg);
-    });
-
-    if(x){
-      if (navigator.app) {
-          navigator.app.exitApp();
-      } else if (navigator.device) {
-          navigator.device.exitApp();
-      } else {
-          window.close();
-      }
-    }
-  }
+    $(document).ready(onDeviceReady);
   window.fn = {};
     window.fn.open = function() {
         let menu = document.getElementById('menu');
@@ -222,7 +156,30 @@
             text: "Hai Hai Timo"
         });
     };
+    function onBackKeyDown(){
+      window.location="index.html";
+      window.plugins.googleplus.disconnect(
+        function (msg) {
+          //alert("Berhasil Logout Google"); // do something useful instead of alerting
+        },function (msg) {
+          //alert("Gagal Logout Google"); // do something useful instead of alerting
+          //alert(msg);
 
+        }
+      );
+      facebookConnectPlugin.api("/me/permissions?method=delete", ['email','user_birthday','public_profile'],function (msg) {
+        //alert("Berhasil Logout  Facebook"); // do something useful instead of alerting
+      }, function (msg) {
+        //alert("Gagal Logout Facebook"); // do something useful instead of alerting
+        //alert(msg);
+      });
+      facebookConnectPlugin.logout(function (msg) {
+        //alert("Berhasil Logout  Facebook"); // do something useful instead of alerting
+      }, function (msg) {
+        //alert("Gagal Logout Facebook"); // do something useful instead of alerting
+        //alert(msg);
+      });
+    }
   app.initialize();
 
   </script>
