--- a/see_more.html
+++ b/see_more.html
@@ -82,13 +82,13 @@
         <a href="next.html"><img src="img/explore_active.png" alt="" style="width:100%;height:100%;"></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
-				<a href="#"><img src="img/favorite.png" alt="" style="width:100%;height:100%;"><br></a>
+				<a href="favorite.html"><img src="img/favorite.png" alt="" style="width:100%;height:100%;"><br></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
 				<a href="history.html"><img src="img/history.png" alt="" style="width:100%;height:100%;"><br></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
-				<a href="#"><img src="img/inbox.png" alt="" style="width:100%;height:100%;"><br></a>
+				<a href="becomehost.html"><img src="img/inbox.png" alt="" style="width:100%;height:100%;"><br></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
 				<a href="profile.html"><img src="img/profile.png" alt="" style="width:100%;height:100%;"><br></a>
